<resources>
    <string name="app_name">Flash Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="app_logo">App Logo</string>
    <string name="log_in">Log in</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? "<b>"Sign up"</b>"</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="have_an_account_log_in">Have an account? "<b>"Log in"</b>"</string>
    <string name="full_name">Full Name</string>
    <string name="create_an_account">Create an account</string>
    <string name="verify_your_phone_no">Verify your Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp">OTP</string>
    <string name="change_phone_number">Change Phone Number?</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend">Resend</string>
    <string name="india_country_code">+91</string>
    <string name="time_initial_value">00</string>
    <string name="colon">:</string>
    <string name="new_chat">New Chat</string>
    <string name="content_desc_chat_preview_image">Image of Chat like user image or group image</string>
    <string name="chat_title">Chat Title</string>
    <string name="last_message">Last message</string>
    <string name="example_date">10/01/20</string>
    <string name="create_new_chat">Create new chat</string>
    <string name="new_group">New group</string>
    <string name="contact_name">Contact Name</string>
    <string name="sample_phone_number">+919999999999</string>
    <string name="you">You</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_message">Send message</string>
    <string name="send">Send</string>
    <string name="group_name">Group Name</string>
    <string name="log_out">Log out</string>
</resources>